welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: type mismatch;
 found   : Unit
 required: Boolean
	while (j=i)
                ^